Project Restructuring and Database Migration to PostgreSQL
In this commit, we've revamped the project structure and migrated from SQLite to PostgreSQL. The strategic changes aim to boost scalability, offering a more robust foundation for the project's ongoing development and expansion.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-social/db.sqlite3
-social/social/__pycache__/
-social/users/__pycache__/
-social/users/migrations/
+backend/__pycache__/
+users/__pycache__/
+users/migrations/
+config.py
+__pycache__/config.cpython-312.pyc
