Post Page Layout and API Integration Initiatives
The post page layout has been configured, and the Post component's initial code has been established in this commit. Moreover, Api.js has been set up to facilitate API requests between the React frontend and Django backend, enabling seamless communication.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ users/migrations/
 config.py
 __pycache__/config.cpython-312.pyc
 devlopment-diary.txt
+posts/migrations/
+posts/__pycache__/
+post_images/
